# Workspace-Booking-APIs

./: Dockerfile  README.md  db.sqlite3  docker-compose.yml  pyproject.toml  requirements.txt
api/: admin.py  models.py  serializers.py  urls.py  views.py
api/migrations/: 0001_initial.py  0002_alter_teammember_user_alter_booking_user_userprofile_and_more.py  0003_remove_booking_slot_booking_checkin_time_and_more.py
workspace_booking/: asgi.py  settings.py  urls.py  wsgi.py
